[gd_scene load_steps=3 format=3 uid="uid://dul8mhj7pomaw"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_kuen4"]

[sub_resource type="Theme" id="Theme_hb6qw"]
Label/font_sizes/font_size = 10

[node name="UI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_kuen4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_hb6qw")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Health" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/Health"]
layout_mode = 2
text = "Health: "

[node name="HealthBar" type="ProgressBar" parent="Control/VBoxContainer/Health"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
size_flags_vertical = 4
show_percentage = false

[node name="GameOverContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -29.0
offset_right = 43.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverContainer"]
layout_mode = 2
text = "Game Over"

[node name="StartButton" type="Button" parent="GameOverContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"
